Updated to 2.3.6